# snapdash

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  mac_build.sh
.cargo/: config.toml
.github/: FUNDING.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml  sync-labels.yml
src/: app.rs  autostart.rs  config.rs  helpers.rs  lib.rs  logger.rs  main.rs  secrets.rs  system_info.rs  theme.rs  update.rs  widget_size.rs
src/app/: lifecycle.rs  mod.rs  snapdash.rs  window.rs
src/ha/: mod.rs  rest.rs  token.rs  types.rs  ws.rs
src/ha/ws/: tests.rs
src/theme/: core.rs  def.rs  hex_color.rs  loader.rs  mod.rs  shadow.rs
src/ui/: chrome.rs  components.rs  entity_window.rs  format.rs  icon.rs  mod.rs  release_notes.rs  settings.rs  theme.rs  update_view.rs
src/ui/components/: button.rs  card.rs  input.rs  mod.rs  scrollable.rs  sensors.rs  settings_components.rs  sparkline.rs  text.rs
src/ui/platform/: composited.rs  linux.rs  macos.rs  mod.rs  native.rs  native_shadow.rs
src/ui/settings/: chrome.rs  mod.rs  sidebar.rs
src/ui/settings/pages/: advanced.rs  appearance.rs  connection.rs  general.rs  mod.rs  sensors.rs  sysinfo.rs  updates.rs
src/update/: installer.rs  mod.rs
src/widget_size/: tests.rs
