[package]
name = "snapdash"
version = "0.0.2"
edition = "2024"
authors = ["Lukáš Svoboda <opensource@schizza.cz>"]
license = "Apache-2.0"
description = "A pluggable desktop widget system - Home Assistant today, anything tomorrow."
repository = "https://github.com/schizza/snapdash"
homepage = "https://snapdash.schizza.cz"
documentation = "https://github.com/schizza/snapdash#readme"
readme = "README.md"
keywords = ["widget", "dashboard", "home-assistant", "desktop", "gui"]
categories = ["gui", "visualization", "rendering"]
rust-version = "1.94"

exclude = [
  "/.github/",
  "/.vscode/",
  "/.zed/",
  "/.claude/",
  "/dist/",
  "/assets/screenshots/",
  "*.png",
  "*.gif",
  ".DS_Store",
  "mac_build.sh",
]

[features]
default = ["diagnostics"]
diagnostics = []

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
iced = { version = "0.14.0", features = ["wgpu", "tokio"] }
directories = "6.0.0"

reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
  "http2",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "fs",
] }
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-webpki-roots",
] }
toml = "1.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service", "vendored"] }

[patch.crates-io]
iced = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p5" }
iced_winit = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p5" }
iced_runtime = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p5" }
iced_program = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p5" }
iced_renderer = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p5" }
iced_widget = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p5" }
iced_core = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p5" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
