[package]
name = "snapdash"
version = "0.0.7"
edition = "2024"
authors = ["Lukáš Svoboda <opensource@schizza.cz>"]
license = "Apache-2.0"
description = "A pluggable desktop widget system - Home Assistant today, anything tomorrow."
repository = "https://github.com/schizza/snapdash"
homepage = "https://snapdash.schizza.cz"
documentation = "https://github.com/schizza/snapdash#readme"
readme = "README.md"
keywords = ["widget", "dashboard", "home-assistant", "desktop", "gui"]
categories = ["gui", "visualization", "rendering"]
rust-version = "1.94"

exclude = [
    "/.github/",
    "/.vscode/",
    "/.zed/",
    "/.claude/",
    "/dist/",
    "/assets/screenshots/",
    "*.png",
    "*.gif",
    ".DS_Store",
    "mac_build.sh",
]

[features]
default = ["diagnostics"]
diagnostics = []

[dependencies]
anyhow = "1.0.102"
auto-launch = "0.6.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
iced = { version = "0.14.0", features = [
    "wgpu",
    "tokio",
    "markdown",
    "sysinfo",
] }
iced_winit = { version = "0.14.0", features = ["sysinfo"] }
directories = "6.0.0"
thiserror = "2.0.18"

sysinfo = "0.38.4"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
    "http2",
    "blocking",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-webpki-roots",
] }
toml = "1.1.2"
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
rand = "0.10.1"
open = "5.3.4"
self_update = { version = "0.44.0", features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }
sha2 = "0.11.0"
tempfile = "3.27.0"
flate2 = "1.1.9"
tar = "0.4.45"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = [
    "sync-secret-service",
    "crypto-rust",
] }

[patch.crates-io]
iced = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p10" }
iced_winit = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p10" }
iced_runtime = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p10" }
iced_program = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p10" }
iced_renderer = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p10" }
iced_widget = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p10" }
iced_core = { git = "https://github.com/schizza/iced.git", tag = "snapdash-v0.14.0-p10" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
